# text_vc_error_bomber

./: .env_template  Cargo.toml
src/: app_discord.rs  app_logger.rs  main.rs  model.rs
