[package]
name = "text_vc_error_bomber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["native_tls_backend"]
native_tls_backend = ["serenity/native_tls_backend"]
rustls_backend = ["serenity/rustls_backend"]

[dependencies]
log = { version = "0.4", features = ["max_level_info"]}
dotenvy = "0.15"
async-trait = "0.1"

[dependencies.tokio]
version = "1"
default-features = false
features = [
    "macros",
    "rt",
]

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "client",
    "http",
    "gateway",
    "model"
]
